--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -34,12 +34,12 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
-  - job_name: 'jenkins1'
+  - job_name: 'jenkins'
     metrics_path: /prometheus
     scrape_interval: 10s
     honor_labels: true
     static_configs:
-      - targets: ['jenkins1:8080']
+      - targets: ['jenkins:8080']
 
 
 alerting:
